# serializer version: 1
# name: test_vacuum[switchbot_K11][vacuum.k11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.k11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12316>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000061-MatterNodeDevice-1-MatterVacuumCleaner-84-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[switchbot_K11][vacuum.k11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_area': None,
      'current_area_name': None,
      'friendly_name': 'K11+',
      'selected_areas': list([
        4,
        3,
      ]),
      'supported_features': <VacuumEntityFeature: 12316>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.k11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_vacuum[vacuum_cleaner][vacuum.mock_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.mock_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12316>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000042-MatterNodeDevice-1-MatterVacuumCleaner-84-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum_cleaner][vacuum.mock_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_area': 7,
      'current_area_name': 'My Location A',
      'friendly_name': 'Mock Vacuum',
      'selected_areas': None,
      'supported_features': <VacuumEntityFeature: 12316>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.mock_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
